<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".action.RegisterActivity">

    <ImageView
        android:id="@+id/reg_image"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:contentDescription="@string/wait"
        android:src="@drawable/ic_img_plane"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:alpha="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center"
            android:text="Account："/>

        <EditText
            android:id="@+id/reg_user_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:hint="设置用户名"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center"
            android:text="Password："/>

        <EditText
            android:id="@+id/reg_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:hint="设置密码"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center"
            android:text="SchoolID："/>

        <EditText
            android:id="@+id/reg_schoolID"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:hint="学号/工号(选填)"/>
    </LinearLayout>



    <RadioGroup
        android:id="@+id/reg_sexGroup"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <RadioButton
            android:id="@+id/reg_sex_man"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="男"/>

        <RadioButton
            android:id="@+id/reg_sex_woman"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="女"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="（选填）"/>

    </RadioGroup>


    <Button
        android:id="@+id/reg_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/colorPrimaryDark"
        android:alpha="0.5"
        android:text="注册" />

    <ProgressBar
        android:id="@+id/reg_proBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/app_name_version"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/app_developer"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>